# Kaguya

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Setup.bat
Kaguya/: CMakeLists.txt  CornellBox.yaml  Github.yaml  Hyperion.yaml  HyperionWith2PointLights.yaml  HyperionWithDragon.yaml  cornell-box.yaml  main.cpp  pch.h
Kaguya/Core/: Application.cpp  Application.h  Delegate.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventReceiver.cpp  EventReceiver.h  Exception.cpp  Exception.h  Handle.h  InputHandler.cpp  InputHandler.h  InterfaceID.h  Keyboard.cpp  Keyboard.h  Log.cpp  Log.h  Math.cpp  Math.h  Mouse.cpp  Mouse.h  Pool.h  RenderSystem.cpp  RenderSystem.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  Time.cpp  Time.h  Utility.h  Window.cpp  Window.h
Kaguya/Core/Allocator/: VariableSizedAllocator.cpp  VariableSizedAllocator.h
Kaguya/Core/Memory/: LinearAllocator.cpp  LinearAllocator.h
Kaguya/Core/Synchronization/: ConditionVariable.h  CriticalSection.h  RWLock.h
Kaguya/Graphics/: AssetManager.cpp  AssetManager.h  BufferManager.cpp  BufferManager.h  Camera.h  DXGIManager.cpp  DXGIManager.h  Editor.cpp  Editor.h  GpuBufferAllocator.cpp  GpuBufferAllocator.h  GpuScene.cpp  GpuScene.h  GpuSceneAllocator.cpp  GpuSceneAllocator.h  GpuTextureAllocator.cpp  GpuTextureAllocator.h  Gui.cpp  Gui.h  Light.h  Material.cpp  Material.h  MaterialLoader.cpp  MaterialLoader.h  Mesh.cpp  Mesh.h  ModelAllocator.cpp  ModelAllocator.h  PathIntegrator.cpp  PathIntegrator.h  Picking.cpp  Picking.h  RTScene.cpp  RTScene.h  RaytracingAccelerationStructure.cpp  RaytracingAccelerationStructure.h  RenderBuffer.cpp  RenderBuffer.h  RenderCommand.h  RenderCommandContext.cpp  (+51 more)
Kaguya/Graphics/AL/: BlendState.cpp  BlendState.h  Buffer.h  Buffer.inl  DepthStencilState.cpp  Heap.cpp  Heap.h  InputLayout.cpp  InputLayout.h  RasterizerState.cpp  RasterizerState.h  Resource.cpp  Resource.h  Texture.h
Kaguya/Graphics/AL/D3D12/: ASGenerator.cpp  ASGenerator.h  AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  Buffer.inl  CommandAllocator.cpp  CommandAllocator.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandContext.inl  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  D3D12AbstractionLayer.cpp  D3D12AbstractionLayer.h  Descriptor.cpp  Descriptor.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  DeviceResource.cpp  DeviceResource.h  DeviceTexture.cpp  DeviceTexture.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  Fence.cpp  Fence.h  Heap.cpp  Heap.h  (+28 more)
Kaguya/Graphics/AL/Proxy/: BufferProxy.cpp  BufferProxy.h  DeviceBufferProxy.cpp  DeviceBufferProxy.h  DeviceResourceProxy.cpp  DeviceResourceProxy.h  DeviceTextureProxy.cpp  DeviceTextureProxy.h  HeapProxy.cpp  PipelineStateProxy.cpp  PipelineStateProxy.h  Proxy.h  RaytracingPipelineStateProxy.cpp  RaytracingPipelineStateProxy.h  ResourceProxy.cpp  ResourceProxy.h  RootSignatureProxy.cpp  RootSignatureProxy.h  TextureProxy.cpp  TextureProxy.h
Kaguya/Graphics/API/: AbstractionLayer.cpp  AbstractionLayer.h  BlendState.cpp  DepthStencilState.cpp  DepthStencilState.h  RasterizerState.cpp  RasterizerState.h
Kaguya/Graphics/API/D3D12/: APID3D12.h  Buffer.cpp  Buffer.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandContext.inl  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Fence.cpp  Heap.cpp  Heap.h  (+24 more)
Kaguya/Graphics/Asset/: AssetCache.cpp  AssetCache.h  AssetManager.cpp  AssetManager.h  AssetStream.cpp  AssetStream.h  AsyncLoader.cpp  AsyncLoader.h  Image.h  Mesh.cpp  Mesh.h
Kaguya/Graphics/Debug/: PIXCapture.cpp  PIXCapture.h  PIXEvent.cpp  PIXEvent.h  PIXMarker.cpp  PIXMarker.h
Kaguya/Graphics/Loader/: ModelLoader.cpp  ModelLoader.h
Kaguya/Graphics/RHI/: AbstractionLayer.cpp  AbstractionLayer.h
Kaguya/Graphics/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraph.inl  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphRegistry.cpp  RenderGraphRegistry.h  RenderGraphResource.cpp  RenderGraphResource.h  RenderPass.h
Kaguya/Graphics/RenderPass/: Accumulation.cpp  Accumulation.h  AmbientOcclusion.cpp  AmbientOcclusion.h  CSM.h  CopyToBackBuffer.cpp  CopyToBackBuffer.h  ForwardRendering.h  GBuffer.cpp  GBuffer.h  LTC.cpp  LTC.h  MeshShader.cpp  MeshShader.h  Pathtracing.cpp  Pathtracing.h  Picking.cpp  Picking.h  PostProcess.cpp  PostProcess.h  RaytraceGBuffer.cpp  RaytraceGBuffer.h  Raytracing.cpp  Raytracing.h  SVGF.cpp  SVGF.h  Shading.cpp  Shading.h  ShadingComposition.cpp  ShadingComposition.h  ShadowDenoiser.cpp  ShadowDenoiser.h  Skybox.h  Tonemap.cpp  Tonemap.h  Tonemapping.cpp  Tonemapping.h
Kaguya/Graphics/Scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  GpuScene.cpp  GpuScene.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialLoader.cpp  MaterialLoader.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelLoader.cpp  ModelLoader.h  Node.cpp  Node.h  SampleScene.cpp  SampleScene.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneParser.cpp  SceneSerializer.cpp  SceneSerializer.h  SharedDefines.h  SharedTypes.h  Skybox.h  Transform.cpp  Transform.h  Vertex.cpp  Vertex.h
Kaguya/Graphics/UI/: AssetWindow.cpp  AssetWindow.h  Editor.cpp  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  RenderSystemWindow.cpp  RenderSystemWindow.h  UIWindow.h  ViewportWindow.cpp  ViewportWindow.h
Kaguya/Math/: MathLibrary.cpp  MathLibrary.h  Transform.cpp  Transform.h
Kaguya/Shaders/: BRDFIntegration_PS.hlsl  BloomComposite_PS.hlsl  Default_VS.hlsl  HLSLCommon.hlsli  HorizontalBlur_CS.hlsl  IrradianceConvolution_PS.hlsl  PBR.hlsli  PrefilterConvolution_PS.hlsl  Sepia_PS.hlsl  Shadow_VS.hlsl  Sky_VS.hlsl  Sobel_CS.hlsl  StaticSamplers.hlsli  VerticalBlur_CS.hlsl
Kaguya/Template/: Pool.h  Pool.inl
(+198 files in other folders)
